--- a/main.tex
+++ b/main.tex
@@ -86,7 +86,7 @@
 \input{intro.tex}
 
 \chapter{Basic Introduction to StochSS}
-
+\label{chapter1}
 \input{T1/tutorial1.tex}
 \input{T2/tutorial2.tex}
 \input{T3/tutorial3.tex}
@@ -136,6 +136,9 @@
  \textit{URDME: {A} modular framework for stochastic simulation
 of reaction-transport processes in complex geometries}. BMC Systems Biology, 6(76) (2012)
   
+  \bibitem{wiki-michaelis-menten}
+  Michaelis-Menten kinetics. 
+  \url{http://en.wikipedia.org/wiki/Michaelis-Menten_kinetics}
   
 \end{thebibliography}
 
