--- a/T4/tutorial4.tex
+++ b/T4/tutorial4.tex
@@ -25,8 +25,8 @@ We will build a simple model based on an annihilation reaction between two chemi
 
 The creation of our new spatial model using the \textbf{Model editor} progresses through the following steps:
 \begin{itemize}
-\item Navigate to the main \textbf{Model editor} (the \textbf{Model} tag is selected by default).
-\item Enter a model name in the \textcolor{blue}{`Name'} text box, select the \textcolor{blue}{`Population'} button and the \textcolor{blue}{`Spatial'} button. Finally, click on the \textcolor{blue}{`Create model'}  button.
+\item Navigate to the main \textbf{Model editor}.
+\item Add a new model. Select the option \textbf{Population, spatial} in the dropdown menu.
  \item Click on the \textcolor{blue}{`Species'} tag to define chemical species names and their diffusion coefficient. 
  \item Use the \textcolor{blue}{`Add species'} button on the right to add \textit{A} and \textit{B} species both with diffusion coefficient $D=1$.
  \item Click on the \textcolor{blue}{`Parameters'} tag to define model parameters names and their expressions. 
@@ -39,14 +39,14 @@ The creation of our new spatial model using the \textbf{Model editor} progresses
   \item \textbf{Click} on the \textcolor{blue}{`Add Initial Condition'} button and \textcolor{blue}{`Select'} `Scatter`, `A`, `Subdomain = 1`,`Count = 500`. \textbf{Click} ', `B`, `Subdomain = 3',`Count = 500'. \textbf{Click} on the \textcolor{blue}{`Add Initial Condition'} button.
 \item Your spatial model is completely defined and ready to be simulated.
 
-\item \textbf{Navigate} to the \textcolor{blue}{Simulation manager} page.
+\item Navigate to the \textbf{Simulation manager} page.
 
-\item \textbf{Select} the spatial model you just created and \textbf{click} on the \textcolor{blue}{`Next'} button.
-\item \textbf{Setup} your simulation parameters: name, time, data storage frequency and realizations. 
-\item To define the initial random seed, \textbf{click} on \textcolor{blue}{`Advanced Settings'}.
-\item \textbf{Click} on the \textcolor{blue}{`Run locally'} button.
-\item In a few seconds you will be directed to the \textcolor{blue}{Job Status} page where you can check the status of your simulation.
-\item Once your simulation is complete, \textbf{click} on the \textcolor{blue}{`View results'} link to open the \textcolor{blue}{Job summary} page where you can visualize the diffusion of the two species (A and B) over time within the cylindrical container and download the output files of the simulation.
+\item Select the spatial model you just created and click the \textbf{Next} button.
+\item Setup your simulation parameters: name, time, data storage frequency and realizations. 
+\item To define the initial random seed, select \textbf{Advanced Settings}.
+\item Click the \textbf{Run locally} button.
+\item In a few seconds you will be directed to the \textbf{Job Status} page where you can check the status of your simulation.
+\item Once your simulation is complete, \textbf{click} the \textbf{View results} link to open the \textbf{Job summary} page, where you can visualize the diffusion of the two species (A and B) over time within the cylindrical container and download the output files of the simulation.
 
 \end{itemize}
 
