--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,8 @@
 \usepackage{tabularx}
 \newcolumntype{R}{>{\raggedleft\arraybackslash}X}
 
-\usepackage{trackchanges}
-\addeditor{SH}
+%\usepackage{trackchanges}
+%\addeditor{SH}
 
 \newcommand*{\TitleFont}{%
       \usefont{\encodingdefault}{\rmdefault}{b}{n}%
@@ -129,7 +129,7 @@
   
   \bibitem{nsm}
   J. Elf and M. Ehrenberg,
-  \textit{Spontaneous separation of bi-stable biochemical systems into spatial domains of opposite phases}. IEEE Systems Biology, 1, 230'6\note[SH]{230'6? --- check this.} (2004)
+  \textit{Spontaneous separation of bi-stable biochemical systems into spatial domains of opposite phases}. IEEE Systems Biology, 1, 230-6 (2004)
   
  \bibitem{urdme}
  B. Drawert, S. Engblom and A. Hellander, 
